# halo2-wasm-test

./: README.md
contract/: Cargo.toml
contract/src/: main.rs
prover/: Cargo.toml
prover/src/: main.rs
shared/: Cargo.toml
shared/src/: lib.rs
tests/: Cargo.toml  halo2_wasm_test.wasm
tests/src/: integration_tests.rs
