[package]
name = "tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
casper-engine-test-support = { path = "../../casperlabs-node/execution_engine_testing/test_support/" }
casper-types = { path = "../../casperlabs-node/types/" }
